--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -50,7 +50,6 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 top-margin">
-        <p class="warning">${_('Are you looking for 32 bit images of F27 Beta? Due to some technical issues we cannot offer them, but they will be available for the F27 final release date. Stay tuned!')}</p>
         <h2>${_('Network Installers')}<span class="prerelease-offer">${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</span></h2>
         </div>
       </div>
@@ -59,7 +58,7 @@
         <p>${_('These are very small images you can use to install Fedora over the network.')}</p>
         </div>
         <div class="col-md-9">
-<!--          <div class="white">
+          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/server.png" />
             </div>
@@ -72,7 +71,7 @@
             <div class="col-md-4">
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Server/x86_64/iso/Fedora-Server-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Server-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
             </div>
-          </div> -->
+          </div>
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/workstation.png" />
@@ -87,7 +86,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/x86_64/iso/Fedora-Workstation-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
             </div>
           </div>
-<!--          <div class="white">
+          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/workstation.png" />
             </div>
@@ -100,7 +99,7 @@
             <div class="col-md-4">
             <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
@@ -139,7 +138,7 @@
           <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/x86_64/iso/Fedora-Workstation-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
-<!--        <div class="white">
+        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/workstation.png" />
           </div>
@@ -147,7 +146,7 @@
           <h3>${_('Workstation')}</h3>
           <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
@@ -189,7 +188,7 @@
           <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/x86_64/iso/Fedora-Workstation-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
-<!--        <div class="white">
+        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/workstation.png" />
           </div>
@@ -199,7 +198,7 @@
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
@@ -1150,7 +1149,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/x86_64/iso/Fedora-Everything-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
             </div>
           </div>
-<!--          <div class="white">
+          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/ev.png" />
             </div>
@@ -1163,7 +1162,7 @@
             <div class="col-md-4">
             <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/i386/iso/Fedora-Everything-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
@@ -1192,7 +1191,7 @@
           <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/x86_64/iso/Fedora-Everything-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
-<!--        <div class="white">
+        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/ev.png" />
           </div>
@@ -1200,7 +1199,7 @@
           <h3>${_('Everything 32-bit')}</h3>
           <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/i386/iso/Fedora-Everything-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
@@ -1230,7 +1229,7 @@
           <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/x86_64/iso/Fedora-Everything-netinst-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
-<!--        <div class="white">
+        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/ev.png" />
           </div>
@@ -1240,7 +1239,7 @@
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Everything/i386/iso/Fedora-Everything-netinst-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${_('Download')}</a> | <a href="/static/checksums/Fedora-Everything-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify')}</a></p>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
