--- a/arm.fedoraproject.org/data/content/prerelease.html
+++ b/arm.fedoraproject.org/data/content/prerelease.html
@@ -136,7 +136,7 @@
             <h3>${_('LXDE Desktop')}</h3>
             </div>
             <div class="col-sm-3 hidden-xs">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['pre_ARM_LXDE']}</p>
+            <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['pre_ARM_LXDE']}</p>
             </div>
             <div class="col-sm-5 hidden-xs">
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-LXDE-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
@@ -154,7 +154,7 @@
             <h3>${_('LXQt Desktop')}</h3>
             </div>
             <div class="col-sm-3 hidden-xs">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['pre_ARM_LXQt']}</p>
+            <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['pre_ARM_LXQt']}</p>
             </div>
             <div class="col-sm-5 hidden-xs">
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
